Adding mime for image uploads

--- a/NodeJS-Upload-Files/package.json
+++ b/NodeJS-Upload-Files/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.2.1",
+    "mime": "^4.1.0",
     "multer": "^2.0.2",
     "uuid": "^13.0.0"
   },
